--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@types/uuid": "^10.0.0",
     "drizzle-orm": "^0.40.1",
     "next": "15.2.3",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "uuid": "^11.1.0",
     "ws": "^8.18.1"
   },
   "devDependencies": {
