--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^10.0.0",
     "drizzle-orm": "^0.40.1",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
