--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.3",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
   },
