--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "@types/uuid": "^10.0.0",
+    "add": "^2.0.6",
+    "bun": "^1.2.5",
     "drizzle-orm": "^0.40.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
@@ -23,6 +25,7 @@
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.3",
     "uuid": "^11.1.0",
     "ws": "^8.18.1"
